[package]
name = "ascii-ify"
version = "0.1.0"
authors = ["FeistyKit <eeveebeevee33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
phf = { version = "*", features = ["macros"] }
clap = {version = "3.0.10", features = ["derive"]}
